--- a/index.html
+++ b/index.html
@@ -153,13 +153,37 @@
             </div>
         </section>
 
+        <!-- Live Search Section -->
+        <section class="live-search-section mt-4" id="liveSearchSection" style="display: none;">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <label for="keywordInput" class="form-label fw-bold" data-translate="liveKeywordSearch">🔍 Live Keyword Search</label>
+                            <input type="text" class="form-control" id="keywordInput" placeholder="Type to search messages..." data-translate-placeholder="liveKeywordPlaceholder">
+                        </div>
+                        <div class="col-md-4 d-flex align-items-end">
+                            <button type="button" class="btn btn-outline-secondary" id="clearLiveSearchBtn">
+                                <i class="fas fa-times me-1"></i>Clear Search
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Pagination Section -->
         <section class="pagination-section mt-4" id="paginationSection" style="display: none;">
-            <nav aria-label="Chat pagination">
-                <ul class="pagination justify-content-center" id="pagination">
-                    <!-- Pagination will be dynamically generated here -->
-                </ul>
-            </nav>
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <div id="paginationInfo"></div>
+                    <nav aria-label="Chat pagination" class="mt-3">
+                        <ul class="pagination justify-content-center" id="pagination">
+                            <!-- Pagination will be dynamically generated here -->
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </section>
     </div>
 
